objects/psa_m__Timecard_Mobile_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>psa_m__Assignment_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the assignment views.</inlineHelpText>
        <label>Assignment Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Assignment_Search_Fields__c</fullName>
        <inlineHelpText>Defines a field set to use for searching on assignments in PSA Mobile Time. The value is the API name on the Assignment field set.</inlineHelpText>
        <label>Assignment Search Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Friday_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the friday day daily views.</inlineHelpText>
        <label>Friday Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Monday_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the monday day daily views.</inlineHelpText>
        <label>Monday Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Project_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the project views.</inlineHelpText>
        <label>Project Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Project_Search_Fields__c</fullName>
        <inlineHelpText>Defines a field set to use for searching on projects in PSA Mobile Time. The value is the API name on the Project field set.</inlineHelpText>
        <label>Project Search Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Project_Task_Fields__c</fullName>
        <inlineHelpText>Fields in this field set are shown in the Task Time Detail view.</inlineHelpText>
        <label>Project Task Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Saturday_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the saturday day daily views.</inlineHelpText>
        <label>Saturday Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Show_Submit_Single_Timecard_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When true, a Submit button is visible on individual timecard header details. The default value is false.</inlineHelpText>
        <label>Show Submit Single Timecard Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>psa_m__Sunday_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the sunday day daily views.</inlineHelpText>
        <label>Sunday Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Task_Time_Fields__c</fullName>
        <inlineHelpText>Fields in this field set are shown in the Task Time Detail view.</inlineHelpText>
        <label>Task Time Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Thursday_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the thursday day daily views.</inlineHelpText>
        <label>Thursday Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Tuesday_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the tuesday day daily views.</inlineHelpText>
        <label>Tuesday Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Wednesday_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the wednesday day daily views.</inlineHelpText>
        <label>Wednesday Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_m__Weekly_Fields__c</fullName>
        <inlineHelpText>Fields in this field set define the fields shown in the weekly views.</inlineHelpText>
        <label>Weekly Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timecard Mobile Settings</label>
</CustomObject>